<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/den"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ledoff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_s_i"
                android:textColor="#121111"
                android:textSize="20sp" />
            <Switch
                android:id="@+id/swDenAo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/motor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motor"
                android:textColor="#121111"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swmotorAo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/offfan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qu_t"
                android:textColor="#121111"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_margin="10dp"
            android:text="@string/nhi_t" />

        <TextView

            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/m" />

        <TextView
            android:id="@+id/hum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/di_n_t_ch" />

            <EditText
                android:id="@+id/dien_tich"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <TextView
            android:id="@+id/chi_phi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center"
                android:text="@string/lo_i_ph_n"
                android:textColor="@color/black"
                android:textStyle="bold"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/l_ng_b_n_n_kg_s_o"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center"
                android:text="@string/b_n_l_t_n"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center"
                android:text="@string/b_n_th_c_n"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/ph_n_h_u_c_n_ho_i_m_c" />

            <TextView
                android:id="@+id/LB_PHCHM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_PHCHM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_PHCHM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/ph_n_h_u_c_n_vi_sinh" />

            <TextView
                android:id="@+id/LB_PHCVS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_PHCVS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_PHCVS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/m_ure" />

            <TextView
                android:id="@+id/LB_URE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_URE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_URE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/super_l_n" />

            <TextView
                android:id="@+id/LB_lan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_lan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_lan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/kali_sunlfat" />

            <TextView
                android:id="@+id/LB_kali"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_kali"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_kali"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:text="@string/npk" />

            <TextView
                android:id="@+id/LB_npk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BL_npk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />

            <TextView
                android:id="@+id/BT_npk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/vien_table"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/gt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/gi_i_thi_u"
        android:textColor="#55DF36" />
</LinearLayout>