<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/nen1"
    android:orientation="vertical"
    tools:context=".VuonrauActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mai_che"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ledoff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dsuoi"
                android:textColor="#121111"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/motor"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/motor"
                android:textColor="#121111"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/offfan"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qu_t"
                android:textColor="#121111"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_margin="10dp"
            android:text="Nhiệt độ:" />

        <TextView

            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Độ ẩm:" />

        <TextView
            android:id="@+id/hum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp" />
    </LinearLayout>

    // hiển thị độ ẩm


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="diện tích:" />

            <EditText
                android:id="@+id/dien_tich"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text" />

            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <TextView
            android:id="@+id/chi_phi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center"
                    android:text="Loại phân"
                    android:textColor="@color/black"
                    android:textStyle="bold"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="Lượng bón\n (kg/sào)"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center"
                    android:text="Bón lót(%)"

                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center"
                    android:text="Bón thúc\n(%)"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="phân hữu cơ \nủ hoại mục" />

                <TextView
                    android:id="@+id/LB_PHCHM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_PHCHM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_PHCHM"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="phân hữu cơ \n vi sinh" />

                <TextView
                    android:id="@+id/LB_PHCVS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_PHCVS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_PHCVS"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="Đạm ure" />

                <TextView
                    android:id="@+id/LB_URE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_URE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_URE"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="Super lân" />

                <TextView
                    android:id="@+id/LB_lan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_lan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_lan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="Kali sunlfat" />

                <TextView
                    android:id="@+id/LB_kali"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_kali"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_kali"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:text="NPK" />

                <TextView
                    android:id="@+id/LB_npk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BL_npk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/BT_npk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/vien_table"
                    android:gravity="center" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/gt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="giới thiệu"
        android:textColor="#55DF36" />
</LinearLayout>
